# ore-forge

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: benchmark-ore-original.yaml  benchmark-ore-xad-baseline.yaml  benchmark-ore-xad-forge.yaml  ci-ore.yaml  ci.yaml
OREAnalytics-benchmark/: CMakeLists.txt  example3_benchmark_forge.cpp  example3_benchmark_original.cpp  example3_benchmark_xad.cpp
patches/: 001-constexpr-real-xad-compat.patch  002-diffusioncalculator-xad-compat.patch  003-analyticeuropeanengine-xad-compat.patch  004-blackvariancetimeextrapolation-xad-compat.patch
patches-quantext/: 000-minimal-build-cmake.patch  000-minimal-build-oreanalytics.patch  000-minimal-build-oredata.patch  001-parametrization-ternary-xad-compat.patch  002-piecewiseconstanthelper-ternary-xad-compat.patch  003-constexpr-real-xad-compat.patch  004-pricingengines-xad-compat.patch  005-pricingengines-ternary-xad-compat.patch  006-pricingengines-ternary2-xad-compat.patch  007-pricingengines-ternary3-xad-compat.patch  008-cpi-engines-xad-compat.patch  009-randomvariable-xad-compat.patch  010-commodityapoengine-xad-compat.patch  011-commodityspreadoptionengine-xad-compat.patch  012-cds-barrier-engines-xad-compat.patch  013-blackswaptionenginedeltagamma-xad-compat.patch  014-discountingcommodityforwardengine-xad-compat.patch  015-fdconvertiblebond-xad-compat.patch  016-indexcdstrancheengine-xad-compat.patch  017-mclgmfwdbondengine-xad-compat.patch  018-mcmultilegbaseengine-xad-compat.patch
scripts/: Dockerfile  build-docker-image.ps1  build-ore-script-unix.sh  build-script-unix.sh  debug-build-ore-script.sh  debug-build-script.sh  rebuild-script.sh  rebuild.ps1  repatch-script.sh  setup-script.sh  start-dev-container.ps1  stop-dev-container.ps1  test-build-fast.ps1  test-build-ore-xad-forge.ps1
src/qlrisks-forge/: ForgeBackend.hpp  ForgeBackendAVX.hpp  ForgeBackendAVX_CAPI.hpp  ForgeBackendCAPI.hpp  ForgeBackends.hpp
test-suite/: CMakeLists.txt  forgebackend_xad.cpp  jit_xad.cpp  quantlibrisks_benchmark.cpp  swaption_benchmark.cpp  swaption_benchmark_baseline.cpp  swaption_jit_pipeline_xad.cpp
